--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     <li class="nav-item">
                         <a class="nav-link active text-light" aria-current="page" href="#">Culture</a>
                     </li>
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <div class="dropdown ">
+                        <button class="btn btn-secondary dropdown-toggle bg-black border-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Business
                         </button>
                         <ul class="dropdown-menu bg-black " style="font-weight: bold;">
