--- a/kartyak.html
+++ b/kartyak.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
-    <div class="container">
-        <div class="row">
+<body style="background-image: url(./img/pexels-alexander-kovalev-2847648.jpg);">
+    <div class="container " style="margin-top: 200px;">
+        <div class="row grid gap-0 row-gap-4">
             <div class="col1 col-12 col-md-6 col-lg-4">
-                <div class="card bottom-left text-bg-dark" style="width: 18rem;">
+                <div class="card bottom-left text-bg-dark " style="width: 18rem;">
                     <div class="card-img-overlay">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -34,7 +34,7 @@
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         <p class="card-text"><small>Last updated 3 mins ago</small></p>
                       </div>
-                      <img src="./img/pexels-arthur-brognoli-2260824.jpg" class="card-img" alt="..." style="padding-bottom: 12rem;">
+                      <img src="./img/pexels-arthur-brognoli-2260824.jpg" class="card-img" alt="..." style="height: 380px;">
                     </div>
                 </div>
             <div class="col3 col-12 col-md-6 col-lg-4">
@@ -55,6 +55,36 @@
                       <img src="./img/pexels-pixabay-414551.jpg" class="card-img" alt="..." >
                 </div>
             </div>
+            <div class="col2 col-12 col-md-6 col-lg-4">
+                <div class="card middle text-bg-dark" style="width: 18rem;">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small>Last updated 3 mins ago</small></p>
+                      </div>
+                      <img src="./img/pexels-arthur-brognoli-2260824.jpg" class="card-img" alt="..." style="height: 390px;">
+                    </div>
+                </div>
+                <div class="col2 col-12 col-md-6 col-lg-4">
+                    <div class="card middle text-bg-dark" style="width: 18rem;">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small>Last updated 3 mins ago</small></p>
+                          </div>
+                          <img src="./img/pexels-arthur-brognoli-2260824.jpg" class="card-img" alt="..." style="height: 390px;">
+                        </div>
+                    </div>
+                    <div class="col2 col-12 col-md-6 col-lg-4">
+                        <div class="card middle text-bg-dark" style="width: 18rem; ">
+                            <div class="card-img-overlay">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small>Last updated 3 mins ago</small></p>
+                              </div>
+                              <img src="./img/pexels-arthur-brognoli-2260824.jpg" class="card-img" alt="..." style="height: 390px;">
+                            </div>
+                        </div>
         </div>
     </div>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
